Switching to wandb.

--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -1,5 +1,7 @@
 name: Train all models
-on: [push]
+on: 
+    workflow_dispatch:
+    push:
 jobs:
   train:
     runs-on: [self-hosted, gpu]
@@ -9,6 +11,7 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.MINIO_AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.MINIO_AWS_SECRET_ACCESS_KEY }}
+        WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
         repo_token: ${{ secrets.GITHUB_TOKEN }}
       options: --gpus all --shm-size=8G
     timeout-minutes: 1440  # Increased job runtime since ML is slow
