--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -7,14 +7,17 @@ jobs:
     runs-on: [self-hosted, gpu]
     container:
       # image: etheredgeb/hateful-memes:cicd
-      # image: docker://iterativeai/cml:0-dvc2-base1-gpu
-      image: docker://python:3.8
+      image: docker://iterativeai/cml:0-dvc2-base1-gpu
+      # image: docker://python:3.8
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.MINIO_AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.MINIO_AWS_SECRET_ACCESS_KEY }}
         WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
         repo_token: ${{ secrets.GITHUB_TOKEN }}
       options: --gpus all --shm-size=8G
+      defaults:
+        run:
+          shell: bash
     timeout-minutes: 1440  # Increased job runtime since ML is slow
     steps:
       - uses: actions/checkout@v2
