--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -44,7 +44,8 @@
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "pip install -r requirements.txt && pip install -e . && dvc pull data/01_raw/* && dvc pull",
-	"runArgs": ["--gpus=all", "--env-file=.env", "--shm-size=8g"],
+	// "runArgs": ["--gpus=all", "--env-file=.env", "--shm-size=8g"],
+	"runArgs": ["--env-file=.env", "--shm-size=512m"],
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
