--- a/dvc.yaml
+++ b/dvc.yaml
@@ -4,7 +4,7 @@ stages:
         python hateful_memes/models/visual_bert.py
         --batch_size 4 
         --fast_dev_run True
-        > logs/test_visual_bert.log 2>&1
+        | tee logs/test_visual_bert.log 2>&1
     deps:
       - data/01_raw/hateful_memes
       - hateful_memes/models/visual_bert.py
@@ -66,7 +66,7 @@ stages:
     cmd: >
         python hateful_memes/models/simple_image.py 
         --fast_dev_run True
-        > logs/test_simple_image.log 2>&1
+        | tee logs/test_simple_image.log 2>&1
     deps:
       - data/01_raw/hateful_memes
       - hateful_memes/models/simple_image.py
