--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,7 +1,7 @@
 stages:
   test_visual_bert:
     cmd: >
-        python hateful_memes/models/visual_bert.py
+        python -m hateful_memes.models.visual_bert
         --batch_size 4 
         --fast_dev_run True
         | tee logs/test_visual_bert.log 2>&1
@@ -15,7 +15,7 @@ stages:
     vars:
       - config/visual_bert.yaml
     cmd: >
-        python hateful_memes/models/visual_bert.py
+        python -m hateful_memes.models.visual_bert
         --batch_size ${batch_size}
         --lr ${lr}
         --epochs ${epochs}
@@ -33,7 +33,7 @@ stages:
 
   test_simple_mlp_image:
     cmd: >
-        python hateful_memes/models/simple_mlp_image.py 
+        python -m hateful_memes.models.simple_mlp_image
         --fast_dev_run True
         > logs/test_simple_mlp_image.log 2>&1
     deps:
@@ -46,7 +46,7 @@ stages:
     vars:
       - config/simple_mlp_image.yaml
     cmd: >
-        python hateful_memes/models/simple_mlp_image.py
+        python -m hateful_memes/models/simple_mlp_image
         --batch_size ${batch_size}
         --lr ${lr}
         --epochs ${epochs}
@@ -64,7 +64,7 @@ stages:
 
   test_simple_image:
     cmd: >
-        python hateful_memes/models/simple_image.py 
+        python -m hateful_memes/models/simple_image
         --fast_dev_run True
         | tee logs/test_simple_image.log 2>&1
     deps:
@@ -77,7 +77,7 @@ stages:
     vars: 
       - config/simple_image.yaml
     cmd: >
-        python hateful_memes/models/simple_image.py
+        python -m hateful_memes/models/simple_image
         --batch_size ${batch_size}
         --lr ${lr}
         --epochs ${epochs}
@@ -95,7 +95,7 @@ stages:
       - data/06_models/simple_image
 
   baseline:
-    cmd: python hateful_memes/models/baseline_algorithm.py
+    cmd: python -m hateful_memes/models/baseline_algorithm
     deps:
       - data/01_raw/hateful_memes
       - hateful_memes/models/baseline_algorithm.py
