--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -38,19 +38,19 @@ jobs:
         run: dvc pull 
 
       - name: Train VisualBERT
-        continue-on-error: true
+        # continue-on-error: true
         run: |
           dvc repro visual_bert
           dvc push visual_bert
 
       - name: Train Simple Image Model
-        continue-on-error: true
+        # continue-on-error: true
         run: |
           dvc repro simple_image
           dvc push simple_image
 
       - name: Train Simple MLP Image Model
-        continue-on-error: true
+        # continue-on-error: true
         run: |
           dvc repro simple_mlp_image
           dvc push simple_mlp_image
