Adding pull to repros.

--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -40,19 +40,19 @@ jobs:
       - name: Train VisualBERT
         # continue-on-error: true
         run: |
-          dvc repro visual_bert
+          dvc repro --pull visual_bert
           dvc push -d visual_bert
 
       - name: Train Simple Image Model
         # continue-on-error: true
         run: |
-          dvc repro simple_image
+          dvc repro --pull simple_image
           dvc push -d simple_image
 
       - name: Train Simple MLP Image Model
         # continue-on-error: true
         run: |
-          dvc repro simple_mlp_image
+          dvc repro --pull simple_mlp_image
           dvc push -d simple_mlp_image
       
       - name: Commit run
