--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -35,6 +35,7 @@ jobs:
         run: dvc pull data/01_raw/hateful_memes
 
       - name: Pull everything else
+        continue-on-error: true
         run: dvc pull 
 
       - name: Train VisualBERT
