--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -2,9 +2,11 @@ name: Train all models
 on: 
     workflow_dispatch:
     push:
-      - '**.py'
-      - config/*yaml
-      - dvc.yaml
+      paths:
+        - '**.js'
+        - '**.py'
+        - config/*yaml
+        - dvc.yaml
 # defaults:
 #     run:
 #       shell: bash
