--- a/.github/workflows/sweep.yaml
+++ b/.github/workflows/sweep.yaml
@@ -5,14 +5,20 @@ on:
   workflow_dispatch:
     inputs:
       sweep_id:
-        description: "Sweep Info from wandb - {team}/{project}/{run_name}"
+        description: "Sweep Info from wandb - meme-team/{project}/{sweep_id}"
         required: true
-
-concurrency: hyper
+    gpu_size:
+        description: 'GPU Tag'
+        required: true
+        default: 'gpu' 
+        type: choice
+        options:
+        - gpu
+        - small-gpu
 
 jobs:
   sweeper:
-    runs-on: [self-hosted,gpu]
+    runs-on: [self-hosted, ${{ github.event.inputs.print_tags }} ]
     timeout-minutes: 1440  # Increased job runtime since ML is slow
     container:
       image: docker://iterativeai/cml:0-dvc2-base1-gpu
