--- a/config/sweeps/wandb_simple_image.yaml
+++ b/config/sweeps/wandb_simple_image.yaml
@@ -8,21 +8,18 @@ project: simple-image
 method: random
 metric:
   goal: minimize
-  name: val/acc
+  name: val/loss
 parameters:
   dense_dim:
     values: [32, 64, 128, 256, 512, 1024, 2048]
   batch_size:
-    values: [4, 8, 16, 32, 64, 128, 256]
+    values: [4, 8, 16, 32, 64, 128]
   lr:
-    min: 0.0000001
-    max: 0.1
+    values: [0.1, 0.05, 0.01, 0.005, 0.001, 0.0005, 0.0001, 0.00001, 0.000001, 0.0000001]
   dropout_rate:
-    min: 0.3
-    max: 0.5
+    values: [0.0, 0.1, 0.2, 0.3, 0.4, 0.5]
   grad_clip:
-    min: 0.0
-    max: 1.0
+    values: [0.1, 0.5, 1.0, 2.0, 5.0, 10.0]
   epochs:
     value: 27
 early_terminate:
