Adding vscode extension.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,6 +36,7 @@
 		"ms-python.python",
 		"ms-python.vscode-pylance",
         "iterative.dvc",
+		"redhat.vscode-yaml",
 		"GitHub.copilot"
 	],
 
