--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -21,6 +21,9 @@ jobs:
 
     timeout-minutes: 1440  # Increased job runtime since ML is slow
     steps:
+      # HOTFIX: https://github.com/actions/checkout/issues/760
+      - name: work around permission issue
+        run: git config --global --add safe.directory /__w/hateful_memes/hateful_memes
       - uses: actions/checkout@v2
 
       - name: Branch name
