--- a/dvc.yaml
+++ b/dvc.yaml
@@ -32,10 +32,10 @@ stages:
       - hateful_memes/models/visual_bert.py
     outs:
       - data/06_models/visual_bert
-    plots:
-      - data/08_reporting/visual_bert/scalars
-    metrics:
-      - data/08_reporting/visual_bert.json
+    # plots:
+    #   - data/08_reporting/visual_bert/scalars
+    # metrics:
+    #   - data/08_reporting/visual_bert.json
 
   test_simple_mlp_image:
     cmd: >
@@ -69,10 +69,10 @@ stages:
       - hateful_memes/models/baseline.py
     outs:
       - data/06_models/simple_mlp_image
-    plots:
-      - data/08_reporting/simple_mlp_image/scalars
-    metrics:
-      - data/08_reporting/simple_mlp_image.json
+    # plots:
+    #   - data/08_reporting/simple_mlp_image/scalars
+    # metrics:
+    #   - data/08_reporting/simple_mlp_image.json
 
   test_simple_image:
     cmd: >
@@ -107,10 +107,10 @@ stages:
       - hateful_memes/models/baseline.py
     outs:
       - data/06_models/simple_image
-    plots:
-      - data/08_reporting/simple_image/scalars
-    metrics:
-      - data/08_reporting/simple_image.json
+    # plots:
+    #   - data/08_reporting/simple_image/scalars
+    # metrics:
+    #   - data/08_reporting/simple_image.json
 
   baseline:
     cmd: python -m hateful_memes.models.baseline_algorithm
