Adding text model to workflow.

--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -63,7 +63,13 @@ jobs:
         run: |
           dvc repro --pull simple_mlp_image
           dvc push -d simple_mlp_image
-      
+            - name: Train Text Model
+            
+      - name: Train Simple Text Model
+        run: |
+          dvc repro --pull simple_text
+          dvc push -d simple_text
+
       - name: Commit run
         run: |
           cml ci
