--- a/config/sweeps/wandb_simple_text.yaml
+++ b/config/sweeps/wandb_simple_text.yaml
@@ -12,6 +12,8 @@ metric:
 parameters:
   dense_dim:
     values: [32, 64, 128, 256, 512]
+  num_layers:
+    values: [1, 2, 3, 4, 5]
   batch_size:
     values: [4, 8, 16, 32]
   lr:
