Adjusting hidden state of text model.

--- a/config/sweeps/wandb_simple_text.yaml
+++ b/config/sweeps/wandb_simple_text.yaml
@@ -25,9 +25,9 @@ parameters:
   grad_clip:
     values: [0.1, 0.5, 1.0, 2.0, 5.0, 10.0]
   epochs:
-    value: 27
-early_terminate:
-  type: hyperband
-  s: 2
-  eta: 3
-  max_iter: 27
+    value: 100
+# early_terminate:
+#   type: hyperband
+#   s: 2
+#   eta: 3
+#   max_iter: 27
