--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -46,10 +46,11 @@
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "pip install -r requirements.txt && pip install -e . && dvc pull data/01_raw/* && dvc pull",
 	// "runArgs": ["--gpus=all", "--env-file=.env", "--shm-size=8g"],
-	"runArgs": ["--env-file=.env", "--shm-size=512m"],
+	"runArgs": ["--env-file=.env", "--shm-size=1g"],
 
     "containerEnv": {
-        "WANDB_ENTITY": "meme-team"
+        "WANDB_ENTITY": "meme-team",
+        "TOKENIZERS_PARALLELISM": "true"
     },
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
