--- a/config/sweeps/wandb_simple_image.yaml
+++ b/config/sweeps/wandb_simple_image.yaml
@@ -13,7 +13,7 @@ parameters:
   dense_dim:
     values: [32, 64, 128, 256, 512, 1024, 2048]
   batch_size:
-    values: [4, 8, 16, 32, 64, 128]
+    values: [16, 32, 64, 128]
   lr:
     values: [0.1, 0.05, 0.01, 0.005, 0.001, 0.0005, 0.0001, 0.00001, 0.000001, 0.0000001]
   dropout_rate:
@@ -21,9 +21,9 @@ parameters:
   grad_clip:
     values: [0.1, 0.5, 1.0, 2.0, 5.0, 10.0]
   epochs:
-    value: 27
-early_terminate:
-  type: hyperband
-  s: 2
-  eta: 3
-  max_iter: 27
+    value: 100
+# early_terminate:
+#   type: hyperband
+#   s: 2
+#   eta: 3
+#   max_iter: 27
