--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,7 @@
 
 absl-py==1.0.0
     # via tensorboard
-<<<<<<< HEAD
 aiobotocore[boto3]==2.2.0
-=======
-aiobotocore[boto3]==2.1.2
->>>>>>> 5fc05b5 (Adding in external dependencies for OFA)
     # via
     #   dvc
     #   s3fs
@@ -28,6 +24,10 @@ aioitertools==0.10.0
     # via aiobotocore
 aiosignal==1.2.0
     # via aiohttp
+antlr4-python3-runtime==4.8
+    # via
+    #   hydra-core
+    #   omegaconf
 appdirs==1.4.4
     # via dvc
 argon2-cffi==21.3.0
@@ -54,24 +54,14 @@ beautifulsoup4==4.10.0
     # via nbconvert
 bleach==4.1.0
     # via nbconvert
-<<<<<<< HEAD
 boto3==1.21.21
     # via aiobotocore
 botocore==1.24.21
-=======
-boto3==1.20.24
-    # via aiobotocore
-botocore==1.23.24
->>>>>>> 5fc05b5 (Adding in external dependencies for OFA)
     # via
     #   aiobotocore
     #   boto3
     #   s3transfer
-<<<<<<< HEAD
 cachetools==5.0.0
-=======
-cachetools==4.2.4
->>>>>>> 5fc05b5 (Adding in external dependencies for OFA)
     # via google-auth
 certifi==2021.10.8
     # via
@@ -82,6 +72,7 @@ cffi==1.15.0
     # via
     #   argon2-cffi-bindings
     #   cryptography
+    #   fairseq
     #   pygit2
 charset-normalizer==2.0.12
     # via
@@ -96,6 +87,7 @@ colorama==0.4.4
     # via
     #   dvc
     #   icecream
+    #   sacrebleu
 commonmark==0.9.1
     # via rich
 configobj==5.0.6
@@ -104,18 +96,11 @@ cryptography==36.0.2
     # via asyncssh
 cycler==0.11.0
     # via matplotlib
-<<<<<<< HEAD
-<<<<<<< HEAD
-debugpy==1.6.0
-=======
 cython==0.29.28
     # via fairseq
 dataclasses==0.6
     # via fairseq
-=======
->>>>>>> eb88252 (Starting to fill out test notebook, fixed fairseq dependency, committing changes to OFA fork.)
-debugpy==1.5.1
->>>>>>> 5fc05b5 (Adding in external dependencies for OFA)
+debugpy==1.6.0
     # via ipykernel
 decorator==5.1.1
     # via ipython
@@ -136,13 +121,6 @@ dpath==2.0.6
 dulwich==0.20.35
     # via scmrepo
 dvc[s3]==2.10.0
-<<<<<<< HEAD
-=======
-    # via -r requirements.in
-dvc-render==0.0.4
-    # via dvc
-dvclive==0.6.0
->>>>>>> 5fc05b5 (Adding in external dependencies for OFA)
     # via -r requirements.in
 dvc-render==0.0.4
     # via dvc
@@ -154,6 +132,8 @@ executing==0.8.3
     # via
     #   icecream
     #   stack-data
+fairseq==0.10.2
+    # via -r requirements.in
 filelock==3.6.0
     # via
     #   huggingface-hub
@@ -201,6 +181,8 @@ grpcio==1.44.0
     # via tensorboard
 huggingface-hub==0.4.0
     # via transformers
+hydra-core==1.1.2
+    # via fairseq
 icecream==2.1.2
     # via -r requirements.in
 idna==3.3
@@ -211,13 +193,10 @@ imageio==2.16.1
     # via scikit-image
 importlib-metadata==4.11.3
     # via markdown
-<<<<<<< HEAD
 importlib-resources==5.6.0
-=======
-importlib-resources==5.2.3
->>>>>>> 5fc05b5 (Adding in external dependencies for OFA)
     # via
     #   dvc
+    #   hydra-core
     #   jsonschema
 ipykernel==6.11.0
     # via
@@ -244,11 +223,7 @@ jinja2==3.1.1
     # via
     #   nbconvert
     #   notebook
-<<<<<<< HEAD
 jmespath==1.0.0
-=======
-jmespath==0.10.0
->>>>>>> 5fc05b5 (Adding in external dependencies for OFA)
     # via
     #   boto3
     #   botocore
@@ -336,11 +311,13 @@ notebook==6.4.10
 numpy==1.22.3
     # via
     #   -r requirements.in
+    #   fairseq
     #   imageio
     #   matplotlib
     #   pandas
     #   pytorch-lightning
     #   pywavelets
+    #   sacrebleu
     #   scikit-image
     #   scipy
     #   seaborn
@@ -352,6 +329,8 @@ numpy==1.22.3
     #   transformers
 oauthlib==3.2.0
     # via requests-oauthlib
+omegaconf==2.1.2
+    # via hydra-core
 packaging==21.3
     # via
     #   bleach
@@ -399,6 +378,8 @@ plotly==5.7.0
     # via -r requirements.in
 ply==3.11
     # via dvc
+portalocker==2.4.0
+    # via sacrebleu
 prometheus-client==0.13.1
     # via notebook
 promise==2.3
@@ -486,6 +467,7 @@ pyyaml==6.0
     # via
     #   huggingface-hub
     #   jsonargparse
+    #   omegaconf
     #   python-benedict
     #   pytorch-lightning
     #   transformers
@@ -501,6 +483,8 @@ qtpy==2.0.1
     # via qtconsole
 regex==2022.3.15
     # via
+    #   fairseq
+    #   sacrebleu
     #   sacremoses
     #   transformers
 requests==2.27.1
@@ -529,14 +513,8 @@ s3fs[boto3]==2022.3.0
     # via dvc
 s3transfer==0.5.2
     # via boto3
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
 sacrebleu==2.0.0
     # via fairseq
->>>>>>> 5fc05b5 (Adding in external dependencies for OFA)
-=======
->>>>>>> eb88252 (Starting to fill out test notebook, fixed fairseq dependency, committing changes to OFA fork.)
 sacremoses==0.0.49
     # via transformers
 scikit-image==0.19.2
@@ -586,15 +564,9 @@ tabulate==0.8.9
     # via
     #   dvc
     #   dvc-render
-<<<<<<< HEAD
-<<<<<<< HEAD
 tenacity==8.0.1
     # via plotly
-=======
     #   sacrebleu
->>>>>>> 5fc05b5 (Adding in external dependencies for OFA)
-=======
->>>>>>> eb88252 (Starting to fill out test notebook, fixed fairseq dependency, committing changes to OFA fork.)
 tensorboard==2.8.0
     # via
     #   pytorch-lightning
@@ -624,6 +596,7 @@ tomli==2.0.1
 torch==1.11.0+cu113
     # via
     #   -r requirements.in
+    #   fairseq
     #   pytorch-lightning
     #   torchaudio
     #   torchmetrics
@@ -648,6 +621,7 @@ tornado==6.1
 tqdm==4.64.0
     # via
     #   dvc
+    #   fairseq
     #   huggingface-hub
     #   pytorch-lightning
     #   sacremoses
