--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/models/OFA"]
 	path = src/models/OFA
-	url = https://github.com/OFA-Sys/OFA
+	url = https://github.com/mthoreson3/OFA
