--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@
 
 absl-py==1.0.0
     # via tensorboard
-aiobotocore==2.1.2
-    # via s3fs
+aiobotocore[boto3]==2.1.2
+    # via
+    #   dvc
+    #   s3fs
 aiohttp==3.8.1
     # via
     #   aiobotocore
@@ -22,6 +24,10 @@ aioitertools==0.10.0
     # via aiobotocore
 aiosignal==1.2.0
     # via aiohttp
+antlr4-python3-runtime==4.8
+    # via
+    #   hydra-core
+    #   omegaconf
 appdirs==1.4.4
     # via dvc
 argon2-cffi==21.3.0
@@ -48,8 +54,13 @@ beautifulsoup4==4.10.0
     # via nbconvert
 bleach==4.1.0
     # via nbconvert
-botocore==1.23.24
+boto3==1.20.24
     # via aiobotocore
+botocore==1.23.24
+    # via
+    #   aiobotocore
+    #   boto3
+    #   s3transfer
 cachetools==4.2.4
     # via google-auth
 certifi==2021.10.8
@@ -61,6 +72,7 @@ cffi==1.15.0
     # via
     #   argon2-cffi-bindings
     #   cryptography
+    #   fairseq
     #   pygit2
 charset-normalizer==2.0.12
     # via
@@ -75,6 +87,7 @@ colorama==0.4.4
     # via
     #   dvc
     #   icecream
+    #   sacrebleu
 commonmark==0.9.1
     # via rich
 configobj==5.0.6
@@ -83,6 +96,10 @@ cryptography==36.0.2
     # via asyncssh
 cycler==0.11.0
     # via matplotlib
+cython==0.29.28
+    # via fairseq
+dataclasses==0.6
+    # via fairseq
 debugpy==1.5.1
     # via ipykernel
 decorator==5.1.1
@@ -103,8 +120,10 @@ dpath==2.0.6
     # via dvc
 dulwich==0.20.34
     # via scmrepo
-dvc[s3]==2.9.5
+dvc[s3]==2.10.0
     # via -r requirements.in
+dvc-render==0.0.4
+    # via dvc
 dvclive==0.6.0
     # via -r requirements.in
 entrypoints==0.4
@@ -115,6 +134,8 @@ executing==0.8.3
     # via
     #   icecream
     #   stack-data
+fairseq==0.10.2
+    # via -r requirements.in
 filelock==3.6.0
     # via
     #   huggingface-hub
@@ -140,6 +161,7 @@ ftfy==6.1.1
 funcy==1.17
     # via
     #   dvc
+    #   dvc-render
     #   scmrepo
 future==0.18.2
     # via
@@ -163,6 +185,8 @@ grpcio==1.44.0
     # via tensorboard
 huggingface-hub==0.4.0
     # via transformers
+hydra-core==1.1.2
+    # via fairseq
 icecream==2.1.2
     # via -r requirements.in
 idna==2.10
@@ -173,9 +197,10 @@ imageio==2.16.1
     # via scikit-image
 importlib-metadata==4.11.3
     # via markdown
-importlib-resources==5.4.0
+importlib-resources==5.2.3
     # via
     #   dvc
+    #   hydra-core
     #   jsonschema
 ipykernel==6.9.2
     # via
@@ -203,7 +228,9 @@ jinja2==3.0.3
     #   nbconvert
     #   notebook
 jmespath==0.10.0
-    # via botocore
+    # via
+    #   boto3
+    #   botocore
 joblib==1.1.0
     # via sacremoses
 jsonargparse[signatures]==4.4.0
@@ -286,11 +313,13 @@ notebook==6.4.10
 numpy==1.22.3
     # via
     #   -r requirements.in
+    #   fairseq
     #   imageio
     #   matplotlib
     #   pandas
     #   pytorch-lightning
     #   pywavelets
+    #   sacrebleu
     #   scikit-image
     #   scipy
     #   seaborn
@@ -302,6 +331,8 @@ numpy==1.22.3
     #   transformers
 oauthlib==3.2.0
     # via requests-oauthlib
+omegaconf==2.1.2
+    # via hydra-core
 packaging==21.3
     # via
     #   bleach
@@ -347,6 +378,8 @@ pip-tools==6.5.1
     # via -r requirements.in
 ply==3.11
     # via dvc
+portalocker==2.4.0
+    # via sacrebleu
 prometheus-client==0.13.1
     # via notebook
 promise==2.3
@@ -434,6 +467,7 @@ pyyaml==6.0
     # via
     #   huggingface-hub
     #   jsonargparse
+    #   omegaconf
     #   python-benedict
     #   pytorch-lightning
     #   transformers
@@ -449,6 +483,8 @@ qtpy==2.0.1
     # via qtconsole
 regex==2022.3.15
     # via
+    #   fairseq
+    #   sacrebleu
     #   sacremoses
     #   transformers
 requests==2.27.1
@@ -475,6 +511,10 @@ ruamel-yaml-clib==0.2.6
     # via ruamel-yaml
 s3fs[boto3]==2022.2.0
     # via dvc
+s3transfer==0.5.2
+    # via boto3
+sacrebleu==2.0.0
+    # via fairseq
 sacremoses==0.0.49
     # via transformers
 scikit-image==0.19.2
@@ -483,7 +523,7 @@ scipy==1.8.0
     # via
     #   scikit-image
     #   seaborn
-scmrepo==0.0.7
+scmrepo==0.0.16
     # via dvc
 seaborn==0.11.2
     # via -r requirements.in
@@ -520,7 +560,10 @@ soupsieve==2.3.1
 stack-data==0.2.0
     # via ipython
 tabulate==0.8.9
-    # via dvc
+    # via
+    #   dvc
+    #   dvc-render
+    #   sacrebleu
 tensorboard==2.8.0
     # via
     #   pytorch-lightning
@@ -550,6 +593,7 @@ tomli==2.0.1
 torch==1.11.0+cu113
     # via
     #   -r requirements.in
+    #   fairseq
     #   pytorch-lightning
     #   torchaudio
     #   torchmetrics
@@ -571,9 +615,10 @@ tornado==6.1
     #   jupyter-client
     #   notebook
     #   terminado
-tqdm==4.63.0
+tqdm==4.64.0
     # via
     #   dvc
+    #   fairseq
     #   huggingface-hub
     #   pytorch-lightning
     #   sacremoses
