--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,6 +1,40 @@
 stages:
   test_visual_bert:
     cmd: >
+        python -m hateful_memes.models.vit
+        --batch_size 4 
+        --fast_dev_run True
+        --log_dir logs/test_simple_vit_image_metrics
+        --project test
+        | tee logs/test_vit.log 2>&1
+    deps:
+      - data/01_raw/hateful_memes
+      - hateful_memes/models/vit.py
+    outs:
+      - logs/test_vit.log
+
+  visual_bert:
+    vars:
+      - config/vit.yaml
+    cmd: >
+        python -m hateful_memes.models.vit
+        --batch_size ${batch_size}
+        --lr ${lr}
+        --epochs ${epochs}
+        --max_length ${max_length}
+        --dense_dim ${dense_dim}
+        --dropout_rate ${dropout_rate}
+        --gradient_clip_value ${gradient_clip_value}
+        --model_dir data/06_models/vit
+    deps:
+      - logs/test_vit.log
+      - data/01_raw/hateful_memes
+      - hateful_memes/models/vit.py
+    outs:
+      - data/06_models/vit
+
+  test_visual_bert:
+    cmd: >
         python -m hateful_memes.models.visual_bert
         --batch_size 4 
         --fast_dev_run True
