--- a/dvc.yaml
+++ b/dvc.yaml
@@ -151,3 +151,35 @@ stages:
       - hateful_memes/models/simple_text.py
     outs:
       - data/06_models/simple_text
+
+  test_super_model:
+    cmd: >
+        python -m hateful_memes.models.super_model
+        --simple_image_chkpt data/06_models/simple_image
+        --simple_text_chkpt data/06_models/simple_text
+        --fast_dev_run True
+        && echo "PASSED" > logs/test_super_model.log
+    deps:
+      - data/01_raw/hateful_memes
+      - hateful_memes/models/super_model.py
+    outs:
+      - logs/test_super_model.log
+
+  super_model:
+    vars: 
+      - config/super_model.yaml
+    cmd: >
+        python -m hateful_memes.models.super_model
+        --batch_size ${batch_size}
+        --lr ${lr}
+        --num_dense_layers ${num_layers}
+        --dense_dim ${dense_dim}
+        --dropout_rate ${dropout_rate}
+        --epochs ${epochs}
+        --model_dir data/06_models/super_model
+    deps:
+      - data/01_raw/hateful_memes
+      - logs/test_super_model.log
+      - hateful_memes/models/super_model.py
+    outs:
+      - data/06_models/super_model
