--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -49,29 +49,37 @@ jobs:
       - name: Train VisualBERT
         # continue-on-error: true
         run: |
-          dvc repro --pull visual_bert
+          dvc pull -a -d visual_bert
+          dvc pull --run-cache visual_bert
+          dvc repro visual_bert
           dvc push -d visual_bert
 
       - name: Train Simple Image Model
         # continue-on-error: true
         run: |
-          dvc repro --pull simple_image
+          dvc pull -a -d simple_image
+          dvc pull --run-cache simple_image
+          dvc repro simple_image
           dvc push -d simple_image
 
       - name: Train Simple MLP Image Model
         # continue-on-error: true
         run: |
-          dvc repro --pull simple_mlp_image
+          dvc pull -a -d simple_mlp_image
+          dvc pull --run-cache simple_mlp_image
+          dvc repro simple_mlp_image
           dvc push -d simple_mlp_image
             
       - name: Train Simple Text Model
         run: |
-          dvc repro --pull simple_text
+          dvc pull -a -d simple_text
+          dvc pull --run-cache simple_text
+          dvc repro simple_text
           dvc push -d simple_text
 
       - name: Train Super Model
         run: |
-          dvc pull -d super_model
+          dvc pull -a -d super_model
           dvc pull --run-cache super_model
           dvc repro super_model
           dvc push -d super_model
