--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -7,6 +7,7 @@ on:
         - '**.py'
         - 'config/*yaml'
         - 'dvc.yaml'
+        - .github/workflows/train.yml
 # defaults:
 #     run:
 #       shell: bash
