--- a/requirements.in
+++ b/requirements.in
@@ -14,13 +14,14 @@ wandb
 pillow
 dvc[s3]==2.10.0
 # dvclive[pytorch_lightning]
-git+https://github.com/Benjamin-Etheredge/dvclive
+# git+https://github.com/Benjamin-Etheredge/dvclive
 
 pandas
 numpy
 seaborn
 jupyter
 scikit-image
+plotly
 
 nbstripout
 icecream
