--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -74,6 +74,11 @@ jobs:
           dvc repro --pull vit
           dvc push -d vit
 
+      - name: Train BEit
+        run: |
+          dvc repro --pull beit
+          dvc push -d beit
+
       - name: Commit run
         run: |
           cml ci
