--- a/dvc.yaml
+++ b/dvc.yaml
@@ -151,3 +151,13 @@ stages:
       - hateful_memes/models/simple_text.py
     outs:
       - data/06_models/simple_text
+
+  test_fairface:
+    cmd: >
+        python -m fairface.fairface
+        && echo "PASSED" > logs/test_fairface.log
+    deps:
+      - fairface/master/test
+      - fairface/models
+    outs:
+      - logs/test_fairface.log
